--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -49,7 +49,8 @@ pipeline {
             }
             post {
                 always {
-                    cleanWs()
+                    archiveArtifacts artifacts: 'logs/*, results/*'
+                    // cleanWs()
                 }
             }
         }
